// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer should create a Footer in english 1`] = `
<DocumentFragment>
  <footer>
    <div>
      Chewam © 2020
      <span
        class="spacer"
      >
          |  
      </span>
      INSEE data (
      <a
        href="https://www.data.gouv.fr/fr/datasets/fichier-des-personnes-decedees"
        rel="noopener noreferrer"
        target="_blank"
      >
        data.gouv.fr
      </a>
      )
    </div>
    <div
      class="wrapper"
    >
      <div
        class="switch"
      >
        <svg
          fill="currentColor"
          height="11"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            dark mode
          </title>
          <path
            d="M283.211 512c78.962 0 151.079-35.925 198.857-94.792 7.068-8.708-.639-21.43-11.562-19.35-124.203 23.654-238.262-71.576-238.262-196.954 0-72.222 38.662-138.635 101.498-174.394 9.686-5.512 7.25-20.197-3.756-22.23A258.156 258.156 0 0 0 283.211 0c-141.309 0-256 114.511-256 256 0 141.309 114.511 256 256 256z"
          />
        </svg>
      </div>
      <span
        class="spacer"
      >
          |  
      </span>
      <a
        class="lang"
        href="/"
      >
        fr
      </a>
      <span
        class="spacer"
      >
          |  
      </span>
      version 0.0.0 (
      <a
        href="https://github.com/chewam/deaths/tree/dev"
        rel="noopener noreferrer"
        target="_blank"
      >
        dev
      </a>
      )
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer should create a Footer in french 1`] = `
<DocumentFragment>
  <footer>
    <div>
      Chewam © 2020
      <span
        class="spacer"
      >
          |  
      </span>
      Données INSEE (
      <a
        href="https://www.data.gouv.fr/fr/datasets/fichier-des-personnes-decedees"
        rel="noopener noreferrer"
        target="_blank"
      >
        data.gouv.fr
      </a>
      )
    </div>
    <div
      class="wrapper"
    >
      <div
        class="switch"
      >
        <svg
          fill="currentColor"
          height="11"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            mode sombre
          </title>
          <path
            d="M283.211 512c78.962 0 151.079-35.925 198.857-94.792 7.068-8.708-.639-21.43-11.562-19.35-124.203 23.654-238.262-71.576-238.262-196.954 0-72.222 38.662-138.635 101.498-174.394 9.686-5.512 7.25-20.197-3.756-22.23A258.156 258.156 0 0 0 283.211 0c-141.309 0-256 114.511-256 256 0 141.309 114.511 256 256 256z"
          />
        </svg>
      </div>
      <span
        class="spacer"
      >
          |  
      </span>
      <a
        class="lang"
        href="/"
      >
        en
      </a>
      <span
        class="spacer"
      >
          |  
      </span>
      version 0.0.0 (
      <a
        href="https://github.com/chewam/deaths/tree/dev"
        rel="noopener noreferrer"
        target="_blank"
      >
        dev
      </a>
      )
    </div>
  </footer>
</DocumentFragment>
`;
